# eeg-device-firmware

./: .gitignore  Cargo.toml  Doxyfile  GenerateDoxygenDocumentation.bat  README.md
.cargo/: config.toml
.devcontainer/: Dockerfile  devcontainer.json
.github/workflows/: CIWorkflow.yml
base/: Cargo.toml
base/src/: allocator.rs  lib.rs  panic.rs
documentation/: overallArchitecture.puml
doxygen/html/: _ads1299_data_converter_8cpp.html  _ads1299_data_converter_8h.html  _ads1299_data_converter_8h_source.html  _ads1299_data_processor_8cpp.html  _ads1299_data_processor_8h.html  _ads1299_data_processor_8h_source.html  _ads1299_driver_8cpp.html  _ads1299_driver_8h.html  _ads1299_driver_8h_source.html  _ads1299_low_driver_8cpp.html  _ads1299_low_driver_8h.html  _ads1299_low_driver_8h_source.html  _arduino_mock_8h.html  _arduino_mock_8h_source.html  _can_proces_events_8h_source.html  _data_flow_controller_8cpp.html  _data_flow_controller_8h.html  _data_flow_controller_8h_source.html  _e_e_g_data_consumer_8h_source.html  _e_e_g_data_producer_8h_source.html  _eeg_data_8h.html  _eeg_data_8h_source.html  _error_handler_8cpp.html  _error_handler_8h.html  _error_handler_8h_source.html  _event_handler_8cpp.html  _event_handler_8h.html  _event_handler_8h_source.html  _events_8h.html  _events_8h_source.html  _fake_data_producer_8cpp.html  _fake_data_producer_8h.html  _fake_data_producer_8h_source.html  _i_can_proces_events_8h.html  _i_can_proces_events_8h_source.html  _i_e_e_g_data_consumer_8h.html  _i_e_e_g_data_consumer_8h_source.html  _i_e_e_g_data_producer_8h.html  _i_e_e_g_data_producer_8h_source.html  _i_pc_communications_8h.html  (+180 more)
doxygen/latex/: _ads1299_data_converter_8cpp.tex  _ads1299_data_converter_8h.tex  _ads1299_data_converter_8h_source.tex  _ads1299_data_processor_8cpp.tex  _ads1299_data_processor_8h.tex  _ads1299_data_processor_8h_source.tex  _ads1299_driver_8cpp.tex  _ads1299_driver_8h.tex  _ads1299_driver_8h_source.tex  _ads1299_low_driver_8cpp.tex  _ads1299_low_driver_8h.tex  _ads1299_low_driver_8h_source.tex  _arduino_mock_8h.tex  _arduino_mock_8h_source.tex  _can_proces_events_8h_source.tex  _data_flow_controller_8cpp.tex  _data_flow_controller_8h.tex  _data_flow_controller_8h_source.tex  _e_e_g_data_consumer_8h_source.tex  _e_e_g_data_producer_8h_source.tex  _eeg_data_8h.tex  _eeg_data_8h_source.tex  _error_handler_8cpp.tex  _error_handler_8h.tex  _error_handler_8h_source.tex  _event_handler_8cpp.tex  _event_handler_8h.tex  _event_handler_8h_source.tex  _events_8h.tex  _events_8h_source.tex  _fake_data_producer_8cpp.tex  _fake_data_producer_8h.tex  _fake_data_producer_8h_source.tex  _i_can_proces_events_8h.tex  _i_can_proces_events_8h_source.tex  _i_e_e_g_data_consumer_8h.tex  _i_e_e_g_data_consumer_8h_source.tex  _i_e_e_g_data_producer_8h.tex  _i_e_e_g_data_producer_8h_source.tex  _i_pc_communications_8h.tex  (+124 more)
lib/ads1299_driver/: Ads1299DataConverter.cpp  Ads1299DataConverter.h  Ads1299DataProcessor.cpp  Ads1299DataProcessor.h  Ads1299Driver.cpp  Ads1299Driver.h  Ads1299LowDriver.cpp  Ads1299LowDriver.h  README.md
lib/data_flow_controller/: DataFlowController.cpp  DataFlowController.h  EEGDataConsumer.h  EEGDataProducer.h  EegData.h  FakeDataProducer.cpp  FakeDataProducer.h  IEEGDataConsumer.h  IEEGDataProducer.h  README.md
lib/error_handler/: ErrorHandler.cpp  ErrorHandler.h  README.md
lib/event_handler/: CanProcesEvents.h  EventHandler.cpp  EventHandler.h  Events.h  (+2 more)
pc-communications-hal/: Cargo.toml
pc-communications-hal/src/: lib.rs  pc_coms_hal.rs
src/: ArduinoMock.h  README.md  main.cpp
usb-hid/: Cargo.toml
usb-hid/src/: lib.rs  usbhid.rs
volks-fw/: Cargo.toml
volks-fw/src/: consts.rs  main.rs
(+150 files in other folders)
