[package]
edition = "2021"
name = "volks-fw"
version = "0.1.0"
authors = [
    "Kevin Nause <kevin@nause.engineering>",
    "Graham Long <longevity_software@mail.com>",
]
license-file = "../LICENSE"

[[bin]]
name = "volks-fw"
test = false
bench = false

[features]
default = []
heap = ["base/heap"] # Enables the heap feature in the base crate

[dependencies]
base = { version = "0.1.0", path = "../base" }
pc-communications-hal = { version = "0.1.0", path = "../pc-communications-hal" }                                       # base crate is a member in the workspace located at path
cortex-m = "^0.7.3"
cortex-m-rt = { version = "^0.7.0", features = ["device"] }
cortex-m-rtic = { version = "0.6.0-rc.4", default-features = false, git = "https://github.com/rtic-rs/cortex-m-rtic" }
embedded-hal = { version = "^0.2.6", features = ["unproven"] }
nrf52840-hal = { version = "^0.14.0", features = ["rt"] }
rtt-target = { version = "^0.3.1", features = ["cortex-m"] }
systick-monotonic = "0.1.0-rc.2"
nrf52840-pac = "0.10.1"
usb-device = "0.2.7"
usbd-serial = "0.1.0"
