[package]
edition = "2021"
name = "volks-fw"
version = "0.1.0"
authors = ["Kevin Nause <kevin@nause.engineering>"]
license-file = "../LICENSE"

[[bin]]
name = "volks-fw"
test = false
bench = false

[features]
default = []
heap = ["base/heap"] # Enables the heap feature in the base crate

[dependencies]
base = { version = "0.1.0", path = "../base" }                  # base crate is a member in the workspace located at path
cortex-m = "^0.7.4"
cortex-m-rt = { version = "^0.7.1", features = ["device"] }
cortex-m-rtic = { version = "1.0.0", default-features = false }
embedded-hal = { version = "^0.2.6", features = ["unproven"] }
nrf52840-hal = { version = "^0.14.1", features = ["rt"] }
rtt-target = { version = "^0.3.1", features = ["cortex-m"] }
systick-monotonic = "1.0.0"
